--- a/project_covid.ipynb
+++ b/project_covid.ipynb
@@ -2711,7 +2711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ae1cbc4",
+   "id": "f37ce2d0",
    "metadata": {},
    "source": [
     "The worst infection rates in our Top 15 list range from 12.74% to 22.09%. In particular, three countries stand out from the others at the high end of this list: Seychelles, Montenegro, and Andorra."
@@ -2775,7 +2775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fe2fa3d",
+   "id": "9608c4b1",
    "metadata": {},
    "source": [
     "As you can see in the bar graph below, there are six countries where the chance of dying from COVID-19 is above 20%. Those countries include the United States, Slovenia, Czechia, San Marino, Georgia, and Montenegro. Some other notable observations:\n",
@@ -2984,7 +2984,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f23bbaf",
+   "id": "b466fa49",
    "metadata": {},
    "source": [
     "In this chart, we see that the infections in Asia, North America, South America, and Europe increase significantly over time. Meanwhile, numbers in Africa are more stable, and Oceania is barely visible."
@@ -3190,7 +3190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00b5f79d",
+   "id": "e0c886d6",
    "metadata": {},
    "source": [
     "This chart of deaths by continent basically matches what we saw in the previous chart; we see that deaths in Africa are surprisingly low, and the numbers from Oceania are insignificant."
@@ -3294,7 +3294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "870d2c6f",
+   "id": "183c74e0",
    "metadata": {},
    "source": [
     "In terms of infection, the USA, UK, and Switzerland are clearly doing the worst overall. However, we are trying to determine the effect of vaccinations on the rate of infection and death over time. Vaccinations began to be administered in the first few months of 2021. When we look at the slope of each line, there appears to be a leveling off of infections soon after. For example, the trajectory of infections in the USA, UK, and Switzerland flattens out somewhat in March of 2021. Later, these same countries all experience a similar increase in infection rate again. Iran and South Africa, on the other hand, seem to have multiple waves with no dramatic decreases."
@@ -3344,7 +3344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f871e5e",
+   "id": "1e05db2d",
    "metadata": {},
    "source": [
     "The first thing we notice on this chart is the staggering rate of death in Peru compared to the other nations in this chart. Generally speaking, each country's numbers follow its line for infection up until 2021. After that, we see some disparity. In the UK, Italy, and Switzerland, there is a distinct leveling-off of the death rate in or after March. In the USA, the trend is similar but less significant. We don't see much leveling-off in Iran or in South Africa, however."
@@ -3395,7 +3395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52770501",
+   "id": "fc12f834",
    "metadata": {},
    "source": [
     "The earliest vaccinations occurred at the end of 2020 and then increase sharply across most nations in our group. In the UK and USA, the highest rate of vaccination is in the first half of 2020. In our previous two charts, we saw a flattening of the infection and death rates that corresponds to these vaccination numbers. If we follow the line for vaccinations in the UK, we see that it flattens around April 2021. A similar observation can be made for the USA, Switzerland, Italy, and China. South Africa's reporting of vaccinations appears to be very spotty, while Iran appears to report their vaccination numbers very rarely. However, both countries show a general increase in vaccinations."
@@ -4336,7 +4336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbf77423",
+   "id": "73b67a32",
    "metadata": {},
    "source": [
     "Although the graph is less striking, we can see a flattening of the line that represents total cases starting around May or June of 2021. Generally, it supports the observations we saw in the graph showing new cases, deaths, and vaccinations."
@@ -4347,7 +4347,7 @@
    "id": "e664a6c5",
    "metadata": {},
    "source": [
-    "# Summary\n",
+    "# Conclusion\n",
     "\n",
     "In this project, we explored and visualized a large set of COVID-19 data with daily values for every country in the world. Below is the list of our original questions and the answers that we can draw from the data set.\n",
     "\n",
