Added Peru to worst countries list

--- a/project_covid.ipynb
+++ b/project_covid.ipynb
@@ -4354,6 +4354,7 @@
     "1. *In which countries is COVID-19 the biggest problem proportionate to population?*\n",
     "\n",
     "The following countries may be the very worst in the world:\n",
+    "* **Peru** has an extremely high rate of death. If you catch COVID-19 in Peru, you \n",
     "* **Montenegro** has possibly has the worst COVID-19 problem in the world. They have the second highest rate of infection and the highest rate of death.\n",
     "* **Czechia** has the second highest rate of death in our list, and is 6th highest in infections.\n",
     "* **United States** scores very high on both infections and deaths. However, its rate of vaccination lags behind other nations with similar access to vaccines.\n",
